Check if module is gacd before get as cf app
Add logic which determines if a module is application or not in the
places, where deployed after is used.
JIRA: LMCROSSITXSADEPLOY-2235